// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Tic-Tac-Toe/Status Next 1`] = `
<div
  data-e2e="status"
>
  Next Player: 丁
</div>
`;

exports[`Snapshot Testing Tic-Tac-Toe/Status Win 1`] = `
<div
  data-e2e="status"
>
  Winner: 丁
</div>
`;
